Fix map spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,10 +89,26 @@ body {
   font-weight: lighter;
 }
 
-#map {
+.map-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 100%;
+  flex-direction: column;
+  padding-top: 20px;
+
+  span {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  }
+}
+
+#map {
+  margin-top: 10px;
+  width: 90%;
+  height: 90%;
   border: 2px solid black;
+  overflow: hidden;
+  border-radius: 5%;
 }
 
 .dropdown {
